// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI surface — help golden > compile --help 1`] = `
"mion compile — tsc-like batch compile

Usage:
    mion compile [--gen-dir DIR] [--no-emit] [OPTIONS]

Transforms every marker file, emits .js via tsgo with source maps composed back
to the ORIGINAL source, and writes the generated cache modules to disk. Emits to
the tsconfig outDir; requires a tsconfig; no stdio protocol.

--no-emit runs the scan + RunType-family diagnostics only and writes nothing
(tsc --noEmit-style).

Flags:
  --binary-sizing-bias dynamic
    	binary dynamic cold-start size bias in [0,1]: 0 = tightest, 1 = most generous (default 0.8)
  --binary-sizing-items int
    	assumed element count for an unbounded collection in the binary cold-start estimate (default 100)
  --binary-sizing-max-bytes int
    	per-type cap on the binary cold-start estimate (default 65536)
  --binary-sizing-string-bytes int
    	assumed UTF-8 byte length of an unbounded string in the binary cold-start estimate (default 32)
  --cwd string
    	working directory (default: $PWD)
  --emit-mode string
    	what each cache entry ships in its code/factory slots: code (default) | functions | both
  --gen-dir string
    	where compile writes the generated cache modules (default <cwd>/__runtypes; also the tsconfig "genDir" plugin key, flag overrides it)
  --hash-length int
    	short-id length for type hashes (0 = default 7)
  --inline-mode string
    	child-inlining policy: default (unnamed compounds inline, named external) | allInternal
  --js-runtime string
    	JS runtime path the format-pattern checks run on (default: RT_JS_RUNTIME, then node, then bun from PATH; any node-compatible runtime works)
  --marker-packages packages
    	comma-separated packages additionally allowed to declare the marker types (InjectRunTypeId, CompTimeArgs, …); @mionjs/run-types is always accepted
  --module-mode string
    	virtual-module grouping: default | allSingle | allModules
  --no-emit
    	report the RunType-family diagnostics without writing (tsc --noEmit-style): scan only, emit no .js and no cache modules
  --no-marker-package-check
    	match markers by type NAME alone, whatever package declared them (escape hatch; a local same-named type then drives rewrites too)
  --no-parallel-render
    	disable the parallel cache renders (parallel is the default)
  --no-parallel-scan
    	disable the parallel marker scan (parallel is the default)
  --no-single-threaded
    	force multi-threaded (the default), overriding a tsconfig singleThreaded:true
  --number-mode string
    	project-wide default for the validate numberMode option: isFinite (default) | typeof | notNaN
  --parse-strategy string
    	project-wide default for the createParseFn strategy option: preserve (default) | strip | fail
  --pattern-sample-count int
    	generated mockSamples per sample-less format pattern (default 100; 0 disables generation)
  --pattern-sample-retries int
    	per-sample draw multiplier for pattern sample generation (whole budget = count × retries; default 10)
  --pprof-cpu string
    	write a CPU profile to PATH (whole run)
  --pprof-heap string
    	write a heap profile to PATH at exit
  --pure-fn-report-file
    	also write the whole-program pure-fn report as JSON to <genDir>/types/pure-fns-report.json
  --pure-fn-report-wire
    	emit the structured pure-fn build report ON THE WIRE (Response.pureFnSites) on generate/scan
  --single-threaded
    	single-threaded mode (also disables the parallel scan + renders)
  --tsconfig string
    	tsconfig.json path (default: discover upward from --cwd, tsc-style)
"
`;

exports[`CLI surface — help golden > enrich --help 1`] = `
"mion enrich — scaffold / reconcile / check the enrichment mirror files

Usage:
    mion enrich <file.ts> <TypeName> [--mock] [--friendly] [--gen-dir <dir>] [--out <path>]
       or: mion enrich <file.ts> <TypeName> --update                    (reconcile an existing mirror)
       or: mion enrich --prune [<mirror-file-or-dir>]                    (strip @rtOrphan carcasses)
       or: mion enrich --files a.ts,b.ts --type Target                   (batch, JSON to stdout)
       or: mion enrich --i18n <locale> [--update|--prune] [<src>]        (per-locale translation mirrors)
       or: mion enrich <file.ts> --no-emit                               (single-file health, no writes)
       or: mion enrich [<dir>] --no-emit                                 (mirror-tree drift, no writes)
       or: mion enrich <file.ts> --require-complete                      (health + completeness gate, no writes)

--no-emit turns any write lane into a diagnostics-only pass — nothing is written.
--no-emit reports wrong/stale content (fails) AND unfilled @todo scaffolds (does NOT fail).
--require-complete adds the @todo / missing-translation blanks to the failing set (implies --no-emit).

Flags:
  --files string
    	batch mode: comma-separated files; resolve --type in each, print JSON skeletons to stdout (no writes)
  --friendly
    	emit a FriendlyText<T> skeleton
  --gen-dir string
    	RunTypes output root override (precedence: this flag > tsconfig genDir > default __runtypes); mirrors live under <genDir>/enriched
  --i18n string
    	manage the per-locale translation mirror files for a locale tag (or 'all' for every tsconfig i18n.locales entry): bare = create, --update = sync, --prune = strip carcasses, --no-emit = completeness gate
  --json
    	emit check diagnostics as a JSON array (the check-only / --no-emit lanes)
  --mock
    	emit a MockData<T> skeleton
  --no-emit
    	report diagnostics without writing (tsc --noEmit-style); REQUIRED to enter a check-only target (a bare file, a dir, or no positional)
  --out string
    	explicit single mirror file path (overrides the computed mirror path; forces a single file)
  --prune
    	destructive: remove every comment block/line tagged @rtOrphan / @rtOrphanChild (with --no-emit: list them, delete nothing)
  --require-complete
    	completeness gate: also FAIL on INCOMPLETE enrichment (unfilled @todo scaffolds, missing/out-of-date translations), not just wrong/stale content; implies --no-emit (never writes)
  --tsconfig string
    	project tsconfig path (default: found like tsc, searching upward from the working directory)
  --type string
    	batch mode: the type name to resolve in every --files entry
  --update
    	reconcile an existing committed mirror file against the freshly regenerated desired set (property merge, never clobbers values)
"
`;

exports[`CLI surface — help golden > serve --help 1`] = `
"mion serve — serve the resolver protocol on stdio

Usage:
    mion serve [--sources project|stdin|ops] [OPTIONS]

Holds a Program + checker in memory and speaks newline-delimited JSON on stdio
(the resolver protocol the bundler plugin drives). --sources selects where the
startup Program comes from: project (build from the tsconfig file list, the
default), stdin (a {"sources":{…}} handshake line, one inferred Program), or ops
(no startup Program; the client drives setSources / scanFiles / dump).

Flags:
  --binary-sizing-bias dynamic
    	binary dynamic cold-start size bias in [0,1]: 0 = tightest, 1 = most generous (default 0.8)
  --binary-sizing-items int
    	assumed element count for an unbounded collection in the binary cold-start estimate (default 100)
  --binary-sizing-max-bytes int
    	per-type cap on the binary cold-start estimate (default 65536)
  --binary-sizing-string-bytes int
    	assumed UTF-8 byte length of an unbounded string in the binary cold-start estimate (default 32)
  --cwd string
    	working directory (default: $PWD)
  --emit-mode string
    	what each cache entry ships in its code/factory slots: code (default) | functions | both
  --enrich-friendly
    	OpEnrich maintains the FriendlyText mirrors (neither family flag = both)
  --enrich-i18n
    	OpEnrich also syncs the per-locale translation mirrors (scaffold + sync only, never translated content)
  --enrich-locales string
    	comma-separated target locales for --enrich-i18n (default: the tsconfig i18n.locales)
  --enrich-mock
    	OpEnrich maintains the MockData mirrors (neither family flag = both)
  --enrich-source-locale string
    	authoring locale of the source FriendlyText mirrors (default: the tsconfig i18n.sourceLocale)
  --gen-dir string
    	RunTypes output root override (precedence: this flag > tsconfig genDir > inferred <srcDir>/__runtypes)
  --hash-length int
    	short-id length for type hashes (0 = default 7)
  --inline-mode string
    	child-inlining policy: default (unnamed compounds inline, named external) | allInternal
  --js-runtime string
    	JS runtime path the format-pattern checks run on (default: RT_JS_RUNTIME, then node, then bun from PATH; any node-compatible runtime works)
  --marker-packages packages
    	comma-separated packages additionally allowed to declare the marker types (InjectRunTypeId, CompTimeArgs, …); @mionjs/run-types is always accepted
  --module-mode string
    	virtual-module grouping: default | allSingle | allModules
  --no-marker-package-check
    	match markers by type NAME alone, whatever package declared them (escape hatch; a local same-named type then drives rewrites too)
  --no-parallel-render
    	disable the parallel cache renders (parallel is the default)
  --no-parallel-scan
    	disable the parallel marker scan (parallel is the default)
  --no-single-threaded
    	force multi-threaded (the default), overriding a tsconfig singleThreaded:true
  --number-mode string
    	project-wide default for the validate numberMode option: isFinite (default) | typeof | notNaN
  --omit-sources-content
    	drop the original source from each 'go'-mode transform source map (the host fills it from its own copy)
  --out-json string
    	after stdin EOF, write the cache as JSON to PATH
  --out-modules string
    	after stdin EOF, write per-entry virtual modules to DIR
  --parse-strategy string
    	project-wide default for the createParseFn strategy option: preserve (default) | strip | fail
  --pattern-sample-count int
    	generated mockSamples per sample-less format pattern (default 100; 0 disables generation)
  --pattern-sample-retries int
    	per-sample draw multiplier for pattern sample generation (whole budget = count × retries; default 10)
  --pprof-cpu string
    	write a CPU profile to PATH (whole run)
  --pprof-heap string
    	write a heap profile to PATH at exit
  --pure-fn-report-file
    	also write the whole-program pure-fn report as JSON to <genDir>/types/pure-fns-report.json
  --pure-fn-report-wire
    	emit the structured pure-fn build report ON THE WIRE (Response.pureFnSites) on generate/scan
  --single-threaded
    	single-threaded mode (also disables the parallel scan + renders)
  --sources string
    	startup Program source: project | stdin | ops
  --transform-relative
    	transform rewrites injected rtmod: specifiers to paths relative to the output root (files mode); off keeps the virtual specifiers
  --tsconfig string
    	tsconfig.json path (default: discover upward from --cwd, tsc-style)
"
`;

exports[`CLI surface — help golden > top-level usage (no args) 1`] = `
"mion — compile-time type resolver for runtypes

Usage:
    mion <command> [OPTIONS]

Commands:
    serve       serve the resolver protocol on stdio (the bundler-plugin path)
    compile     tsc-like batch compile: emit .js + generated cache modules to disk (--no-emit: diagnostics only)
    enrich      scaffold / reconcile / check the enrichment mirror files (--no-emit: diagnostics only)
    convert     rewrite type declarations between the three authoring forms
    drizzle-migrate  move a drizzle schema onto the slim @mionjs/drizzle-orm-* packages

Run  mion <command> -h  for a command's own options.

Shared options (same meaning under every command):
    --tsconfig PATH     tsconfig.json to load (default: discover upward from --cwd)
    --cwd PATH          working directory (default: $PWD)
    --hash-length N     short-id length for type hashes (default 7)
    --emit-mode MODE    fn-entry code/factory slots: code (default) | functions | both
    --inline-mode MODE  child-inlining: default | allInternal
    --module-mode MODE  virtual-module grouping: default | allSingle | allModules
    --number-mode MODE  validate numberMode default: isFinite (default) | typeof | notNaN
    --parse-strategy S  parse strategy default: preserve (default) | strip | fail
    --single-threaded / --no-single-threaded
    --no-parallel-scan / --no-parallel-render
    --binary-sizing-bias / --binary-sizing-items / --binary-sizing-string-bytes / --binary-sizing-max-bytes
    --js-runtime PATH   JS runtime the pattern checks run on (default: RT_JS_RUNTIME, then node, then bun from PATH)
    --pattern-sample-count N    generated mockSamples per sample-less pattern (default 100; 0 disables)
    --pattern-sample-retries N  per-sample draw multiplier for pattern generation (default 10)
    --pure-fn-report-wire / --pure-fn-report-file
    --pprof-cpu PATH / --pprof-heap PATH
    -h, --help          show help
    --version           print version (binary + pinned tsgo revision) and exit

The on-disk RT artifact cache (per-(typeID, fnTag) files under
<cwd>/node_modules/.cache/ts-runtypes/<optsFingerprint>/...) follows TypeScript's
own incremental switch: it is enabled when the loaded tsconfig sets
"incremental" or "composite", and disabled otherwise. The internal RT_CACHE_DIR
environment variable overrides this for tests and direct-binary use: set it to a
path to force the cache on at that location, or to an empty string to force it
off. Binary version is folded into every typeID hash so cross-version files
never collide.
"
`;
